--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write ."
@@ -28,7 +32,8 @@
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.13",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.7",
@@ -49,7 +54,10 @@
     "lint-staged": "15.5.0",
     "prettier-plugin-astro": "0.14.1",
     "supabase": "^2.72.8",
-    "typescript-eslint": "8.28.0"
+    "typescript-eslint": "8.28.0",
+    "vitest": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
+    "@vitest/coverage-v8": "^2.1.8"
   },
   "lint-staged": {
     "*.{ts,tsx,astro}": [
