--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@astrojs/node": "^9.4.3",
     "@astrojs/react": "^4.3.1",
     "@astrojs/sitemap": "^3.5.1",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.93.1",
     "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^19.1.12",
@@ -28,8 +28,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.2.5",
@@ -40,6 +42,8 @@
     "@eslint/js": "9.23.0",
     "@typescript-eslint/eslint-plugin": "8.28.0",
     "@typescript-eslint/parser": "8.28.0",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
     "eslint": "9.23.0",
     "eslint-config-prettier": "10.1.1",
     "eslint-import-resolver-typescript": "4.2.5",
@@ -55,9 +59,7 @@
     "prettier-plugin-astro": "0.14.1",
     "supabase": "^2.72.8",
     "typescript-eslint": "8.28.0",
-    "vitest": "^2.1.8",
-    "@vitest/ui": "^2.1.8",
-    "@vitest/coverage-v8": "^2.1.8"
+    "vitest": "^2.1.8"
   },
   "lint-staged": {
     "*.{ts,tsx,astro}": [
