--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ pnpm-debug.log*
 
 # environment variables
 .env
+.env.test
 .env.production
 
 # macOS-specific files
@@ -22,3 +23,7 @@ pnpm-debug.log*
 
 # jetbrains setting folder
 .idea/
+
+# playwright
+playwright-report/
+test-results/
